# agent-action

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.obsidian/: workspace.json
customer/: .env.example  .gitignore  README.md
customer/doc/: architecture.md  collaboration-guide.md  current-step.md  decisions.md  final-deliverables.md  implementation-goals.md  learning-plan.md  product-flow.md  progress.md  quality-gates.md
customer/doc/archive/: prototype-history.md
customer/src/bili_support/: __init__.py  main.py
customer/tests/unit/: test_health.py
data/evaluation/: intent_dev_v1.jsonl
doc/: architecture.md  collaboration-guide.md  course-realignment-2026-07-20.md  current-step.md  decisions.md  final-deliverables.md  implementation-goals.md  learning-plan.md  mysql-redis-setup.md  mysql-schema.sql  product-flow.md  progress.md  quality-gates.md  reference-enterprise-rag-review.md  source-plan-alignment.md  week1-completion.md  week2-completion.md  week2-step2a-completion.md  week3-completion.md  week4-learning-record.md  week4-step4a-intent-schema.md  week4-step4b-zero-shot-prompt.md
doc/guides/: intent-few-shot-hybrid.md  intent-schema.md  intent-zero-shot-prompt.md
migrations/: env.py
migrations/versions/: 20260719_0001_week3_conversations.py
scripts/: quality.py
src/bili_support/: main.py
src/bili_support/agents/: human_handoff.py  intent.py  knowledge.py  supervisor.py  verification.py
src/bili_support/api/: admin.py  chat.py  conversations.py  error_handlers.py  knowledge.py  router.py
src/bili_support/core/: cache.py  config.py  database.py  exceptions.py  logging.py  (+2 more)
tests/integration/: test_conversation_api.py  test_migrations.py
tests/unit/: test_api_foundation.py  test_chat_api.py  test_chat_service.py  test_config.py  test_conversation_cache.py  test_exceptions.py  test_health.py  test_intent_classifier.py  test_intent_evaluation.py  test_intent_prompt.py  test_intent_rules.py  test_intent_types.py  test_llm_context.py  test_llm_factory.py  test_llm_provider.py  test_llm_public_api.py  test_llm_types.py  test_llm_usage.py  test_mock_llm.py  test_openai_compatible.py  test_prompts.py  test_schemas.py  test_structured_output.py  test_support_ui.py
(+84 files in other folders)
